tests/ast_interpreter/err_var_undeclared_assign.expected
<string>:2:1: error: undeclared variable "y"
y = 20;
^